--- a/locale/ru_RU/LC_MESSAGES/messages.po
+++ b/locale/ru_RU/LC_MESSAGES/messages.po
@@ -274,33 +274,33 @@ msgstr "Пожалуйста, выберите хотя бы одного пол
 #, php-format
 msgid "%d user added to group."
 msgid_plural "%d users added to group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d пользователь добавлен в группу."
+msgstr[1] "%d пользователя добавлено в группу."
+msgstr[2] "%d пользователей добавлено в группу."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:171
 #, php-format
 msgid "%d user could not be added."
 msgid_plural "%d users could not be added."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d пользователь не может быть добавлен."
+msgstr[1] "%d пользователя не могут быть добавлены."
+msgstr[2] "%d пользователей не могут быть добавлены."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:220
 #, php-format
 msgid "%d user removed from group."
 msgid_plural "%d users removed from group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d пользователь удалён из группы."
+msgstr[1] "%d пользователя удалено из группы."
+msgstr[2] "%d пользователей удалено из группы."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:253
 #, php-format
 msgid "%d user could not be removed."
 msgid_plural "%d users could not be removed."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d пользователь не может быть удалён."
+msgstr[1] "%d пользователя не могут быть удалены."
+msgstr[2] "%d пользователей не могут быть удалены."
 
 #: lib/Application/Controller/DnsWizardController.php:57
 msgid "DNS wizards are not enabled."
@@ -1083,33 +1083,33 @@ msgstr "Пожалуйста, выберите хотя бы одну зону."
 #, php-format
 msgid "%d zone added to group."
 msgid_plural "%d zones added to group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зона добавлена в группу."
+msgstr[1] "%d зоны добавлено в группу."
+msgstr[2] "%d зон добавлено в группу."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:184
 #, php-format
 msgid "%d zone could not be added."
 msgid_plural "%d zones could not be added."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зона не может быть добавлена."
+msgstr[1] "%d зоны не могут быть добавлены."
+msgstr[2] "%d зон не могут быть добавлены."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:230
 #, php-format
 msgid "%d zone removed from group."
 msgid_plural "%d zones removed from group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зона удалена из группы."
+msgstr[1] "%d зоны удалено из группы."
+msgstr[2] "%d зон удалено из группы."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:276
 #, php-format
 msgid "%d zone could not be removed."
 msgid_plural "%d zones could not be removed."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зона не может быть удалена."
+msgstr[1] "%d зоны не могут быть удалены."
+msgstr[2] "%d зон не могут быть удалены."
 
 #: lib/Application/Controller/AddPermTemplController.php:50
 msgid "You do not have the permission to add permission templates."
@@ -1309,9 +1309,9 @@ msgstr "Пожалуйста, выберите хотя бы одну групп
 #, php-format
 msgid "User added to %d group successfully."
 msgid_plural "User added to %d groups successfully."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Пользователь успешно добавлен в %d группу."
+msgstr[1] "Пользователь успешно добавлен в %d группы."
+msgstr[2] "Пользователь успешно добавлен в %d групп."
 
 #: lib/Application/Controller/EditUserController.php:419
 #, php-format
@@ -1319,8 +1319,14 @@ msgid "Failed to add user to %d group (already a member or group not found)."
 msgid_plural ""
 "Failed to add user to %d groups (already a member or groups not found)."
 msgstr[0] ""
+"Не удалось добавить пользователя в %d группу (уже является участником или "
+"группа не найдена)."
 msgstr[1] ""
+"Не удалось добавить пользователя в %d группы (уже является участником или "
+"группы не найдены)."
 msgstr[2] ""
+"Не удалось добавить пользователя в %d групп (уже является участником или "
+"группы не найдены)."
 
 #: lib/Application/Controller/DeletePermTemplController.php:51
 msgid "You do not have the permission to delete permission templates."
