--- a/locale/es_ES/LC_MESSAGES/messages.po
+++ b/locale/es_ES/LC_MESSAGES/messages.po
@@ -286,29 +286,29 @@ msgstr "Por favor seleccione al menos un usuario."
 #, php-format
 msgid "%d user added to group."
 msgid_plural "%d users added to group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d usuario añadido al grupo."
+msgstr[1] "%d usuarios añadidos al grupo."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:171
 #, php-format
 msgid "%d user could not be added."
 msgid_plural "%d users could not be added."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d usuario no pudo ser añadido."
+msgstr[1] "%d usuarios no pudieron ser añadidos."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:220
 #, php-format
 msgid "%d user removed from group."
 msgid_plural "%d users removed from group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d usuario eliminado del grupo."
+msgstr[1] "%d usuarios eliminados del grupo."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:253
 #, php-format
 msgid "%d user could not be removed."
 msgid_plural "%d users could not be removed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d usuario no pudo ser eliminado."
+msgstr[1] "%d usuarios no pudieron ser eliminados."
 
 #: lib/Application/Controller/DnsWizardController.php:57
 msgid "DNS wizards are not enabled."
@@ -1098,29 +1098,29 @@ msgstr "Por favor seleccione al menos una zona."
 #, php-format
 msgid "%d zone added to group."
 msgid_plural "%d zones added to group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zona añadida al grupo."
+msgstr[1] "%d zonas añadidas al grupo."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:184
 #, php-format
 msgid "%d zone could not be added."
 msgid_plural "%d zones could not be added."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zona no pudo ser añadida."
+msgstr[1] "%d zonas no pudieron ser añadidas."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:230
 #, php-format
 msgid "%d zone removed from group."
 msgid_plural "%d zones removed from group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zona eliminada del grupo."
+msgstr[1] "%d zonas eliminadas del grupo."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:276
 #, php-format
 msgid "%d zone could not be removed."
 msgid_plural "%d zones could not be removed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zona no pudo ser eliminada."
+msgstr[1] "%d zonas no pudieron ser eliminadas."
 
 #: lib/Application/Controller/AddPermTemplController.php:50
 msgid "You do not have the permission to add permission templates."
@@ -1321,8 +1321,8 @@ msgstr "Por favor seleccione al menos un grupo."
 #, php-format
 msgid "User added to %d group successfully."
 msgid_plural "User added to %d groups successfully."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Usuario añadido a %d grupo correctamente."
+msgstr[1] "Usuario añadido a %d grupos correctamente."
 
 #: lib/Application/Controller/EditUserController.php:419
 #, php-format
@@ -1330,7 +1330,11 @@ msgid "Failed to add user to %d group (already a member or group not found)."
 msgid_plural ""
 "Failed to add user to %d groups (already a member or groups not found)."
 msgstr[0] ""
+"No se pudo añadir el usuario a %d grupo (ya es miembro o el grupo no se "
+"encontró)."
 msgstr[1] ""
+"No se pudo añadir el usuario a %d grupos (ya es miembro o los grupos no se "
+"encontraron)."
 
 #: lib/Application/Controller/DeletePermTemplController.php:51
 msgid "You do not have the permission to delete permission templates."
