--- a/locale/sv_SE/LC_MESSAGES/messages.po
+++ b/locale/sv_SE/LC_MESSAGES/messages.po
@@ -305,29 +305,29 @@ msgstr "Välj minst en användare."
 #, php-format
 msgid "%d user added to group."
 msgid_plural "%d users added to group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d användare tillagd i gruppen."
+msgstr[1] "%d användare tillagda i gruppen."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:171
 #, php-format
 msgid "%d user could not be added."
 msgid_plural "%d users could not be added."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d användare kunde inte läggas till."
+msgstr[1] "%d användare kunde inte läggas till."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:220
 #, php-format
 msgid "%d user removed from group."
 msgid_plural "%d users removed from group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d användare borttagen från gruppen."
+msgstr[1] "%d användare borttagna från gruppen."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:253
 #, php-format
 msgid "%d user could not be removed."
 msgid_plural "%d users could not be removed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d användare kunde inte tas bort."
+msgstr[1] "%d användare kunde inte tas bort."
 
 #: lib/Application/Controller/DnsWizardController.php:57
 #, auto-english-fallback
@@ -766,15 +766,15 @@ msgstr "Inga zoner valda."
 #, php-format
 msgid "%d zone has been unlinked from template successfully."
 msgid_plural "%d zones have been unlinked from template successfully."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zon har kopplats bort från mallen."
+msgstr[1] "%d zoner har kopplats bort från mallen."
 
 #: lib/Application/Controller/UnlinkZonesTemplController.php:106
 #, php-format
 msgid "%d zone could not be unlinked."
 msgid_plural "%d zones could not be unlinked."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zon kunde inte kopplas bort."
+msgstr[1] "%d zoner kunde inte kopplas bort."
 
 #: lib/Application/Controller/UnlinkZonesTemplController.php:116
 #, auto-english-fallback
@@ -1248,29 +1248,29 @@ msgstr "Välj minst en zon."
 #, php-format
 msgid "%d zone added to group."
 msgid_plural "%d zones added to group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zon tillagd i gruppen."
+msgstr[1] "%d zoner tillagda i gruppen."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:184
 #, php-format
 msgid "%d zone could not be added."
 msgid_plural "%d zones could not be added."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zon kunde inte läggas till."
+msgstr[1] "%d zoner kunde inte läggas till."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:230
 #, php-format
 msgid "%d zone removed from group."
 msgid_plural "%d zones removed from group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zon borttagen från gruppen."
+msgstr[1] "%d zoner borttagna från gruppen."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:276
 #, php-format
 msgid "%d zone could not be removed."
 msgid_plural "%d zones could not be removed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d zon kunde inte tas bort."
+msgstr[1] "%d zoner kunde inte tas bort."
 
 #: lib/Application/Controller/AddPermTemplController.php:50
 #, auto-english-fallback
@@ -1517,8 +1517,8 @@ msgstr "Välj minst en grupp."
 #, php-format
 msgid "User added to %d group successfully."
 msgid_plural "User added to %d groups successfully."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Användare tillagd i %d grupp."
+msgstr[1] "Användare tillagd i %d grupper."
 
 #: lib/Application/Controller/EditUserController.php:419
 #, php-format
@@ -1526,7 +1526,11 @@ msgid "Failed to add user to %d group (already a member or group not found)."
 msgid_plural ""
 "Failed to add user to %d groups (already a member or groups not found)."
 msgstr[0] ""
+"Kunde inte lägga till användare i %d grupp (redan medlem eller grupp "
+"hittades inte)."
 msgstr[1] ""
+"Kunde inte lägga till användare i %d grupper (redan medlem eller grupper "
+"hittades inte)."
 
 #: lib/Application/Controller/DeletePermTemplController.php:51
 #, auto-english-fallback
@@ -9163,6 +9167,8 @@ msgid ""
 "MX for Microsoft 365: "
 "<code>[DOMAIN]-[TLD].mail.protection.outlook.com</code>"
 msgstr ""
+"MX för Microsoft 365: "
+"<code>[DOMAIN]-[TLD].mail.protection.outlook.com</code>"
 
 #: templates/modern/add_zone_templ_record.html:177
 #, auto-english-fallback
