--- a/locale/tr_TR/LC_MESSAGES/messages.po
+++ b/locale/tr_TR/LC_MESSAGES/messages.po
@@ -268,29 +268,29 @@ msgstr "Lütfen en az bir kullanıcı seçin."
 #, php-format
 msgid "%d user added to group."
 msgid_plural "%d users added to group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d kullanıcı gruba eklendi."
+msgstr[1] "%d kullanıcı gruba eklendi."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:171
 #, php-format
 msgid "%d user could not be added."
 msgid_plural "%d users could not be added."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d kullanıcı eklenemedi."
+msgstr[1] "%d kullanıcı eklenemedi."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:220
 #, php-format
 msgid "%d user removed from group."
 msgid_plural "%d users removed from group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d kullanıcı gruptan kaldırıldı."
+msgstr[1] "%d kullanıcı gruptan kaldırıldı."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:253
 #, php-format
 msgid "%d user could not be removed."
 msgid_plural "%d users could not be removed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d kullanıcı kaldırılamadı."
+msgstr[1] "%d kullanıcı kaldırılamadı."
 
 #: lib/Application/Controller/DnsWizardController.php:57
 msgid "DNS wizards are not enabled."
@@ -1063,29 +1063,29 @@ msgstr "Lütfen en az bir bölge seçin."
 #, php-format
 msgid "%d zone added to group."
 msgid_plural "%d zones added to group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d alan gruba eklendi."
+msgstr[1] "%d alan gruba eklendi."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:184
 #, php-format
 msgid "%d zone could not be added."
 msgid_plural "%d zones could not be added."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d alan eklenemedi."
+msgstr[1] "%d alan eklenemedi."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:230
 #, php-format
 msgid "%d zone removed from group."
 msgid_plural "%d zones removed from group."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d alan gruptan kaldırıldı."
+msgstr[1] "%d alan gruptan kaldırıldı."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:276
 #, php-format
 msgid "%d zone could not be removed."
 msgid_plural "%d zones could not be removed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d alan kaldırılamadı."
+msgstr[1] "%d alan kaldırılamadı."
 
 #: lib/Application/Controller/AddPermTemplController.php:50
 msgid "You do not have the permission to add permission templates."
@@ -1285,16 +1285,16 @@ msgstr "Lütfen en az bir grup seçin."
 #, php-format
 msgid "User added to %d group successfully."
 msgid_plural "User added to %d groups successfully."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Kullanıcı %d gruba başarıyla eklendi."
+msgstr[1] "Kullanıcı %d gruba başarıyla eklendi."
 
 #: lib/Application/Controller/EditUserController.php:419
 #, php-format
 msgid "Failed to add user to %d group (already a member or group not found)."
 msgid_plural ""
 "Failed to add user to %d groups (already a member or groups not found)."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Kullanıcı %d gruba eklenemedi (zaten üye veya grup bulunamadı)."
+msgstr[1] "Kullanıcı %d gruba eklenemedi (zaten üye veya gruplar bulunamadı)."
 
 #: lib/Application/Controller/DeletePermTemplController.php:51
 msgid "You do not have the permission to delete permission templates."
