--- a/locale/uk_UA/LC_MESSAGES/messages.po
+++ b/locale/uk_UA/LC_MESSAGES/messages.po
@@ -306,33 +306,33 @@ msgstr "Будь ласка, виберіть принаймні одного к
 #, php-format
 msgid "%d user added to group."
 msgid_plural "%d users added to group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d користувача додано до групи."
+msgstr[1] "%d користувачі додано до групи."
+msgstr[2] "%d користувачів додано до групи."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:171
 #, php-format
 msgid "%d user could not be added."
 msgid_plural "%d users could not be added."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d користувача не вдалося додати."
+msgstr[1] "%d користувачі не вдалося додати."
+msgstr[2] "%d користувачів не вдалося додати."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:220
 #, php-format
 msgid "%d user removed from group."
 msgid_plural "%d users removed from group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d користувача видалено з групи."
+msgstr[1] "%d користувачі видалено з групи."
+msgstr[2] "%d користувачів видалено з групи."
 
 #: lib/Application/Controller/ManageGroupMembersController.php:253
 #, php-format
 msgid "%d user could not be removed."
 msgid_plural "%d users could not be removed."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d користувача не вдалося видалити."
+msgstr[1] "%d користувачі не вдалося видалити."
+msgstr[2] "%d користувачів не вдалося видалити."
 
 #: lib/Application/Controller/DnsWizardController.php:57
 #, auto-english-fallback
@@ -773,17 +773,17 @@ msgstr "Зони не вибрано."
 #, php-format
 msgid "%d zone has been unlinked from template successfully."
 msgid_plural "%d zones have been unlinked from template successfully."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зону успішно від'єднано від шаблону."
+msgstr[1] "%d зони успішно від'єднано від шаблону."
+msgstr[2] "%d зон успішно від'єднано від шаблону."
 
 #: lib/Application/Controller/UnlinkZonesTemplController.php:106
 #, php-format
 msgid "%d zone could not be unlinked."
 msgid_plural "%d zones could not be unlinked."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зону не вдалося від'єднати."
+msgstr[1] "%d зони не вдалося від'єднати."
+msgstr[2] "%d зон не вдалося від'єднати."
 
 #: lib/Application/Controller/UnlinkZonesTemplController.php:116
 #, auto-english-fallback
@@ -1260,33 +1260,33 @@ msgstr "Будь ласка, виберіть принаймні одну зон
 #, php-format
 msgid "%d zone added to group."
 msgid_plural "%d zones added to group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зону додано до групи."
+msgstr[1] "%d зони додано до групи."
+msgstr[2] "%d зон додано до групи."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:184
 #, php-format
 msgid "%d zone could not be added."
 msgid_plural "%d zones could not be added."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зону не вдалося додати."
+msgstr[1] "%d зони не вдалося додати."
+msgstr[2] "%d зон не вдалося додати."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:230
 #, php-format
 msgid "%d zone removed from group."
 msgid_plural "%d zones removed from group."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зону видалено з групи."
+msgstr[1] "%d зони видалено з групи."
+msgstr[2] "%d зон видалено з групи."
 
 #: lib/Application/Controller/ManageGroupZonesController.php:276
 #, php-format
 msgid "%d zone could not be removed."
 msgid_plural "%d zones could not be removed."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d зону не вдалося видалити."
+msgstr[1] "%d зони не вдалося видалити."
+msgstr[2] "%d зон не вдалося видалити."
 
 #: lib/Application/Controller/AddPermTemplController.php:50
 #, auto-english-fallback
@@ -1534,9 +1534,9 @@ msgstr "Будь ласка, виберіть принаймні одну гру
 #, php-format
 msgid "User added to %d group successfully."
 msgid_plural "User added to %d groups successfully."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Користувача успішно додано до %d групи."
+msgstr[1] "Користувача успішно додано до %d груп."
+msgstr[2] "Користувача успішно додано до %d груп."
 
 #: lib/Application/Controller/EditUserController.php:419
 #, php-format
@@ -1544,8 +1544,14 @@ msgid "Failed to add user to %d group (already a member or group not found)."
 msgid_plural ""
 "Failed to add user to %d groups (already a member or groups not found)."
 msgstr[0] ""
+"Не вдалося додати користувача до %d групи (вже є учасником або групу не "
+"знайдено)."
 msgstr[1] ""
+"Не вдалося додати користувача до %d груп (вже є учасником або групи не "
+"знайдено)."
 msgstr[2] ""
+"Не вдалося додати користувача до %d груп (вже є учасником або групи не "
+"знайдено)."
 
 #: lib/Application/Controller/DeletePermTemplController.php:51
 #, auto-english-fallback
@@ -9937,6 +9943,8 @@ msgid ""
 "MX for Microsoft 365: "
 "<code>[DOMAIN]-[TLD].mail.protection.outlook.com</code>"
 msgstr ""
+"MX для Microsoft 365: "
+"<code>[DOMAIN]-[TLD].mail.protection.outlook.com</code>"
 
 #: templates/modern/add_zone_templ_record.html:177
 #, auto-english-fallback
